@@ -18,9 +18,9 @@ install|upgrade)
     # This is to ensure stale PPDs from previous versions are removed.
     # When Gutenprint no longer allows the user to generate PPDs, make
     # this into a versioned check.
-    rm -rf /usr/share/cups/model/gutenprint/5.1
+    rm -rf /usr/share/cups/model/gutenprint/5.2
     rmdir /usr/share/cups/model/gutenprint 2>/dev/null || true
-    rm -rf /usr/share/ppd/gutenprint/5.1
+    rm -rf /usr/share/ppd/gutenprint/5.2
     rmdir /usr/share/ppd/gutenprint 2>/dev/null || true
 
     # Remove /etc/command.types (moved to
