@@ -1,5 +1,5 @@
 Document: gutenprint-doc
-Title: Gutenprint 5.1 User's Manual
+Title: Gutenprint 5.2 User's Manual
 Author: Robert Krawitz
 Abstract: Gutenprint is a set of printer drivers written to take
  advantage of the full capabilities of a wide range of printers. This
