@@ -1,2 +1,2 @@
-debian/install/usr/bin/ijsgutenprint.5.1           usr/bin
+debian/install/usr/bin/ijsgutenprint.5.2          usr/bin
 debian/install/usr/share/man/man1/ijsgutenprint.1  usr/share/man/man1
