@@ -114,9 +114,9 @@ binary-arch: build install
 	dh_testroot -a
 	dh_installdocs -a
 	  cp src/cups/README debian/cupsys-driver-gutenprint/usr/share/doc/cupsys-driver-gutenprint/README.cups
-	  mv debian/ijsgutenprint/usr/share/man/man1/ijsgutenprint.1 debian/ijsgutenprint/usr/share/man/man1/ijsgutenprint.5.1.1
-	  ln -s ijsgutenprint.5.1.1.gz debian/ijsgutenprint/usr/share/man/man1/ijsgutenprint.1.gz
-	  ln -s ijsgutenprint.5.1 debian/ijsgutenprint/usr/bin/ijsgutenprint
+	  mv debian/ijsgutenprint/usr/share/man/man1/ijsgutenprint.1 debian/ijsgutenprint/usr/share/man/man1/ijsgutenprint.5.2.1
+	  ln -s ijsgutenprint.5.2.1.gz debian/ijsgutenprint/usr/share/man/man1/ijsgutenprint.1.gz
+	  ln -s ijsgutenprint.5.2 debian/ijsgutenprint/usr/bin/ijsgutenprint
 	dh_installexamples -a
 	dh_installchangelogs -a NEWS
 	dh_strip -a
