@@ -1,9 +1,10 @@
 gutenprint (5.2.1-1) experimental; urgency=low
 
   * New upstream stable release.
-  * Upgraded to Standards version 3.8.0
+  * Upgraded to Standards version 3.8.0.
+  * debian/*: Update version from 5.1 to 5.2. 
 
- -- Roger Leigh <rleigh@debian.org>  Wed, 22 Oct 2008 13:58:49 +0100
+ -- Roger Leigh <rleigh@debian.org>  Tue, 28 Oct 2008 23:37:23 +0000
 
 gutenprint (5.1.98.2-2) experimental; urgency=low
 
